# cv_motion_detection_video

./: .gitignore  SUMMARY.md  notes.md  pyproject.toml
notebooks/: exploration.ipynb
scripts/: downstream_yolo_eval.py  run_eval.py  visualize.py
src/detectors/: base.py  bg_subtract.py  frame_diff.py  optical_flow.py
src/eval/: metrics.py  pr_curve.py
src/utils/: cdnet_loader.py  video_io.py
