[project]
name = "motion-detection"
version = "0.1.0"
description = "Motion-based frame reduction pipeline with CDnet 2014 evaluation"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.4.45",
]

[project.optional-dependencies]
downstream = [
    "ultralytics>=8.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
run-eval = "scripts.run_eval:main"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
